loco-gen/src/snapshots/loco_gen__tera_ext__tests__can_render_form_field_[form_int^_int^].snap
---
source: loco-gen/src/tera_ext.rs
expression: "format!(\"Create form\\n\\n{create_form}\\n\\nEdit Form\\n\\n{edit_form}\")"
---
Create form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">int^</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-9223372036854775808" max="9223372036854775807" id="int^" name="int^" type="number" value="" required step="1" />
</div>

Edit Form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">int^</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-9223372036854775808" max="9223372036854775807" id="int^" name="int^" type="number" value="{{item.int^}}" required step="1" />
</div>
